Fix info panel icon text color (themeify changed them to be unreadable).

--- a/octoprint_octolapse/static/css/octolapse.css
+++ b/octoprint_octolapse/static/css/octolapse.css
@@ -164,6 +164,9 @@ div#octolapse-current-camera{
     background-color: #bd362f;
 }
 
+.octolapse .info-panel-icon {
+    color: black;
+}
 .text-left{
     text-align:left;
 }
